--- a/nginx-ingress-controller:0.25.1
+++ b/nginx-ingress-controller:0.25.1
@@ -1,2 +1,2 @@
-# FROM quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.25.1
-FROM registry.cn-hangzhou.aliyuncs.com/google_containers/nginx-ingress-controller:0.25.1
+FROM quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.25.1
+# FROM registry.cn-hangzhou.aliyuncs.com/google_containers/nginx-ingress-controller:0.25.1
